# pwlp

./: .drone.yml  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  build_pi.sh  config.example.toml  generate_programs.sh  generate_tests.sh  index.html  rustfmt.toml
.cargo/: config
src/: lib.rs  main.rs  test.rs
src/programs/: default_serve.txt  off.txt
src/pwlp/: api.rs  ast.rs  client.rs  instructions.rs  mod.rs  parser.rs  program.rs  protocol.rs  server.rs  strip.rs  vm.rs
test/: blink.dis  blink.out  clamp.dis  clamp.out  clamp.txt  clock.dis  clock.out  clock.txt  comment.dis  comment.out  comment.txt  cycle.dis  cycle.out  cycle.txt  intrinsics.dis  intrinsics.out  intrinsics.txt  level_in_parameter.dis  level_in_parameter.out  level_in_parameter.txt  loop.dis  loop.out  loop.txt  program.dis  rainbow.dis  rainbow.out  rainbow.txt  random.dis  random.out  random.txt  random_inc.dis  random_inc.out  random_inc.txt  random_life.dis  random_life.out  random_life.txt  set_all.dis  set_all.out  set_all.txt  set_pixel.dis  (+13 more)
