[package]
name = "pwlp-server"
version = "0.1.0"
authors = ["Tommy van der Vorst <tommy@pixelspark.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
hmac-sha1 = "0.1.3"
eui48 = "0.4.6"
toml = "0.5.3"
byteorder = "1.3.2"
serde = { version = "1.0", features = ["derive"] }